write service test