@@ -1,5 +1,8 @@
 package com.project.KiTucXa.service;
 
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
+
 import com.project.KiTucXa.Dto.Request.ContractDto;
 import com.project.KiTucXa.Dto.Response.ContractResponse;
 import com.project.KiTucXa.Dto.Update.ContractUpdateDto;
@@ -9,7 +12,6 @@ import com.project.KiTucXa.Entity.User;
 import com.project.KiTucXa.Enum.ContractStatus;
 import com.project.KiTucXa.Enum.DepositStatus;
 import com.project.KiTucXa.Exception.AppException;
-import com.project.KiTucXa.Exception.ErrorCode;
 import com.project.KiTucXa.Mapper.ContractMapper;
 import com.project.KiTucXa.Repository.ContractRepository;
 import com.project.KiTucXa.Repository.RoomRepository;
@@ -23,15 +25,13 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.math.BigDecimal;
-import java.util.Date;
-import java.util.List;
+import java.sql.Date;
 import java.util.Optional;
-
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.*;
+import java.util.List;
+import java.util.Collections;
 
 @ExtendWith(MockitoExtension.class)
-public class ContractServiceTest {
+class ContractServiceTest {
 
     @Mock
     private ContractRepository contractRepository;
@@ -49,129 +49,115 @@ public class ContractServiceTest {
     private ContractService contractService;
 
     private Contract contract;
+    private ContractDto contractDto;
     private User user;
     private Room room;
-    private ContractDto contractDto;
-    private ContractResponse contractResponse;
 
     @BeforeEach
     void setUp() {
         user = new User();
-        user.setUserId("user-123");
+        user.setUserId("user123");
 
         room = new Room();
-        room.setRoomId("room-456");
+        room.setRoomId("room123");
+
+        contractDto = new ContractDto("user123", "room123", new Date(System.currentTimeMillis()), new Date(System.currentTimeMillis() + 86400000), new BigDecimal("5000000"), DepositStatus.COMPLETED, ContractStatus.Active, "Test Contract");
 
         contract = new Contract();
-        contract.setContractId("contract-789");
         contract.setUser(user);
         contract.setRoom(room);
-        contract.setStartDate(new Date());
-        contract.setEndDate(new Date());
+        contract.setStartDate(new Date(System.currentTimeMillis()));
+        contract.setEndDate(new Date(System.currentTimeMillis() + 86400000));
         contract.setPrice(new BigDecimal("5000000"));
         contract.setDepositStatus(DepositStatus.COMPLETED);
         contract.setContractStatus(ContractStatus.Active);
-        contract.setNote("Hợp đồng ký 6 tháng");
-
-        contractDto = new ContractDto("user-123", "room-456", new Date(), new Date(),
-                new BigDecimal("5000000"), DepositStatus.COMPLETED, ContractStatus.Active, "Hợp đồng ký 6 tháng");
-
-        contractResponse = new ContractResponse();
-
-        when(userRepository.findById("user-123")).thenReturn(Optional.of(user));
-        when(roomRepository.findById("room-456")).thenReturn(Optional.of(room));
-        when(contractMapper.toContract(contractDto)).thenReturn(contract);
-        when(contractRepository.save(contract)).thenReturn(contract);
-        when(contractMapper.toContractResponse(contract)).thenReturn(contractResponse);
     }
 
     @Test
     void testCreateContract_Success() {
-        ContractResponse result = contractService.createContract(contractDto);
+        when(userRepository.findById("user123")).thenReturn(Optional.of(user));
+        when(roomRepository.findById("room123")).thenReturn(Optional.of(room));
+        when(contractMapper.toContract(contractDto)).thenReturn(contract);
+        when(contractRepository.save(contract)).thenReturn(contract);
+        when(contractMapper.toContractResponse(contract)).thenReturn(new ContractResponse());
 
-        assertNotNull(result, "ContractResponse không được null");
-        verify(contractRepository).save(contract);
-        verify(contractMapper).toContractResponse(contract);
+        ContractResponse response = contractService.createContract(contractDto);
+
+        assertNotNull(response);
+        verify(contractRepository, times(1)).save(contract);
     }
 
     @Test
     void testCreateContract_UserNotFound() {
-        when(userRepository.findById("user-123")).thenReturn(Optional.empty());
+        when(userRepository.findById("user123")).thenReturn(Optional.empty());
 
-        AppException exception = assertThrows(AppException.class, () -> contractService.createContract(contractDto));
-
-        assertEquals(ErrorCode.USER_NOT_FOUND, exception.getErrorCode());
-        verify(contractRepository, never()).save(any());
+        assertThrows(AppException.class, () -> contractService.createContract(contractDto));
     }
 
     @Test
     void testCreateContract_RoomNotFound() {
-        when(roomRepository.findById("room-456")).thenReturn(Optional.empty());
+        when(userRepository.findById("user123")).thenReturn(Optional.of(user));
+        when(roomRepository.findById("room123")).thenReturn(Optional.empty());
 
-        AppException exception = assertThrows(AppException.class, () -> contractService.createContract(contractDto));
-
-        assertEquals(ErrorCode.ROOM_NOT_FOUND, exception.getErrorCode());
-        verify(contractRepository, never()).save(any());
+        assertThrows(AppException.class, () -> contractService.createContract(contractDto));
     }
 
     @Test
-    void testGetAllContracts_Success() {
-        when(contractRepository.findAll()).thenReturn(List.of(contract));
-        when(contractMapper.toContractResponse(contract)).thenReturn(contractResponse);
+    void testGetAllContracts() {
+        when(contractRepository.findAll()).thenReturn(Collections.singletonList(contract));
+        when(contractMapper.toContractResponse(any())).thenReturn(new ContractResponse());
 
-        List<ContractResponse> result = contractService.getAllContracts();
+        List<ContractResponse> responses = contractService.getAllContracts();
 
-        assertEquals(1, result.size());
-        verify(contractRepository).findAll();
+        assertFalse(responses.isEmpty());
+        verify(contractRepository, times(1)).findAll();
     }
 
     @Test
-    void testGetContract_Success() {
-        when(contractRepository.findById("contract-789")).thenReturn(Optional.of(contract));
+    void testGetContractById_Success() {
+        when(contractRepository.findById("contract123")).thenReturn(Optional.of(contract));
+        when(contractMapper.toContractResponse(contract)).thenReturn(new ContractResponse());
 
-        ContractResponse result = contractService.getContractById("contract-789");
+        ContractResponse response = contractService.getContractById("contract123");
 
-        assertNotNull(result);
-        verify(contractRepository).findById("contract-789");
+        assertNotNull(response);
+        verify(contractRepository, times(1)).findById("contract123");
     }
 
     @Test
-    void testGetContract_NotFound() {
-        when(contractRepository.findById("invalid-id")).thenReturn(Optional.empty());
+    void testGetContractById_NotFound() {
+        when(contractRepository.findById("contract123")).thenReturn(Optional.empty());
 
-        Exception exception = assertThrows(RuntimeException.class, () -> contractService.getContractById("invalid-id"));
-
-        assertEquals("Contract not found", exception.getMessage());
+        assertThrows(AppException.class, () -> contractService.getContractById("contract123"));
     }
 
     @Test
     void testUpdateContract_Success() {
-        ContractUpdateDto updateDto = new ContractUpdateDto("contract-789", "user-123", "room-456", new Date(), new Date(),
-                new BigDecimal("5500000"), DepositStatus.UNPAID, ContractStatus.Inactive, "Gia hạn thêm 3 tháng");
+        ContractUpdateDto contractUpdateDto = new ContractUpdateDto(new Date(System.currentTimeMillis()), new Date(System.currentTimeMillis() + 172800000), new BigDecimal("6000000"), DepositStatus.UNPAID, ContractStatus.Inactive, "Updated Note");
+        when(contractRepository.findById("contract123")).thenReturn(Optional.of(contract));
+        doNothing().when(contractMapper).updateContract(contract, contractUpdateDto);
+        when(contractRepository.save(contract)).thenReturn(contract);
+        when(contractMapper.toContractResponse(contract)).thenReturn(new ContractResponse());
 
-        when(contractRepository.findById("contract-789")).thenReturn(Optional.of(contract));
+        ContractResponse response = contractService.updateContract("contract123", contractUpdateDto);
 
-        ContractResponse result = contractService.updateContract("contract-789", updateDto);
-
-        assertNotNull(result);
-        verify(contractRepository).save(contract);
+        assertNotNull(response);
+        verify(contractRepository, times(1)).save(contract);
     }
 
     @Test
     void testDeleteContract_Success() {
-        when(contractRepository.existsById("contract-789")).thenReturn(true);
+        when(contractRepository.existsById("contract123")).thenReturn(true);
+        doNothing().when(contractRepository).deleteById("contract123");
 
-        assertDoesNotThrow(() -> contractService.deleteContract("contract-789"));
-
-        verify(contractRepository).deleteById("contract-789");
+        assertDoesNotThrow(() -> contractService.deleteContract("contract123"));
+        verify(contractRepository, times(1)).deleteById("contract123");
     }
 
     @Test
     void testDeleteContract_NotFound() {
-        when(contractRepository.existsById("invalid-id")).thenReturn(false);
+        when(contractRepository.existsById("contract123")).thenReturn(false);
 
-        Exception exception = assertThrows(RuntimeException.class, () -> contractService.deleteContract("invalid-id"));
-
-        assertEquals("Contract not found", exception.getMessage());
+        assertThrows(AppException.class, () -> contractService.deleteContract("contract123"));
     }
 }
